# phantompad-server

./: CMakeLists.txt  LICENSE  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  deploy.yml  release.yml
cmake/: CPM.cmake
installer/: THIRDPARTY.txt  installer.nsi  phantompad.service
public/: app-ads.txt
res/: phantompad.rc  resource.h
src/: ClientEndpoint.hpp  ControllerState.hpp  Main.cpp  PacketDispatcher.hpp  Packets.hpp  Server.hpp  Utils.hpp
src/content/docs/: index.mdx
src/content/docs/guides/: installation.md  uninstalling.md  usage.md
src/content/docs/legal/: privacy.md  terms-of-service.md
src/driver/: UInput.cpp  UInput.hpp  ViGEm.cpp  ViGEm.hpp
src/socket/: UnixSocket.cpp  UnixSocket.hpp  WinSocket.cpp  WinSocket.hpp
src/utils/: Unix.cpp  Win.cpp
